WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146002
FTL boolify() UntypedUse is wrong in the masquerades-as-undefined case
https://bugs.webkit.org/show_bug.cgi?id=146002
Summary
FTL boolify() UntypedUse is wrong in the masquerades-as-undefined case
Filip Pizlo
Reported
2015-06-15 20:27:05 PDT
It makes non-masquerading objects boolify to False instead of True.
Attachments
the patch
(3.00 KB, patch)
2015-06-15 20:29 PDT
,
Filip Pizlo
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-06-15 20:29:20 PDT
Created
attachment 254927
[details]
the patch
Darin Adler
Comment 2
2015-06-16 10:41:11 PDT
Comment on
attachment 254927
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254927&action=review
> Source/JavaScriptCore/ChangeLog:8 > + * ftl/FTLLowerDFGToLLVM.cpp: Put this in an anonymous namespace. We should have done that all along. It makes it easier to add debug code.
Should we be using anonymous namespaces throughout WebKit instead of “static” to make things local to a file? A while back this made debugging harder, which I think is why we didn’t do that at the time.
Mark Lam
Comment 3
2015-06-16 11:32:06 PDT
<
rdar://problem/21393673
>
Filip Pizlo
Comment 4
2015-06-16 12:07:14 PDT
(In reply to
comment #2
)
> Comment on
attachment 254927
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=254927&action=review
> > > Source/JavaScriptCore/ChangeLog:8 > > + * ftl/FTLLowerDFGToLLVM.cpp: Put this in an anonymous namespace. We should have done that all along. It makes it easier to add debug code. > > Should we be using anonymous namespaces throughout WebKit instead of > “static” to make things local to a file? A while back this made debugging > harder, which I think is why we didn’t do that at the time.
I didn't know about the debugging issue. Compiler debugging usually involves glorified printf()'s. My preference is to use anonymous namespaces instead of static, because it allows us to create one block in a module that contains all of the module-local stuff - functions, classes, variables, enums, etc. It's very liberating - you can use short names. We've been steadily converting the DFG/FTL to use anonymous namespaces for the module-local classes. Each compiler phase usually involves at least one module-local class. That's really all I'm doing here.
Filip Pizlo
Comment 5
2015-06-16 12:18:35 PDT
Landed in
http://trac.webkit.org/changeset/185600
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug